--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -14,6 +14,10 @@ RoxygenNote: 7.1.1
 Imports:
     Rcpp,
     matrixStats,
+    SummarizedExperiment,
+    Matrix,
+    data.table,
+    magrittr,
     plyr,
     nabor,
     motifmatchr,
@@ -31,6 +35,7 @@ Imports:
 Depends:
     Seurat,
     ggplot2,
+    magrittr,
     SummarizedExperiment,
     data.table,
     Matrix,
@@ -38,7 +43,6 @@ Depends:
     magrittr,
     S4Vectors,
     plyr,
-    dplyr,
     BiocGenerics,
     GenomicRanges,
     Rcpp,
