--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -12,6 +12,7 @@ LazyData: true
 LinkingTo: Rcpp
 RoxygenNote: 7.1.1
 Imports:
+    ChIPseeker,
     Rcpp,
     matrixStats,
     SummarizedExperiment,
@@ -33,6 +34,7 @@ Imports:
     Biostrings,
     ComplexHeatmap
 Depends:
+    ChIPseeker,
     Seurat,
     ggplot2,
     magrittr,
